fixed misaligned nav tabs

--- a/stylesheets/_nav.scss
+++ b/stylesheets/_nav.scss
@@ -92,7 +92,7 @@
   }
 
   .tabs {
-    margin: 0 -40px 0;
+    margin: 0 -20px 0;
     padding: 0 20px;
     border-bottom: 1px solid #ccc;
     width: 103.9%;
